merkle root refactoring